QmlOutline: Show functions in outline
Reviewed-by: Christiaan Janssen
(cherry picked from commit e871b7e3302aaa27a723c0cfc1635e47eba5c09a)

--- a/src/libs/qmljs/qmljs.qrc
+++ b/src/libs/qmljs/qmljs.qrc
@@ -3,5 +3,6 @@
         <file>images/element.png</file>
         <file>images/property.png</file>
 	<file>images/publicmember.png</file>
+	<file>images/func.png</file>
     </qresource>
 </RCC>
